--- a/index.css
+++ b/index.css
@@ -14,31 +14,24 @@ img {
 }
 
 .kontejner {
-box-sizing: border-box;
-border: solid gray;
-border-radius: 10px;
-}
-
-/* mobil */
-@media screen and (min-width: 0px) and (max-width:540px) {
-.kontejner {
 	box-sizing: border-box;
+	border: solid gray;
+	border-radius: 10px;
 	display: block;
 	flex-wrap: nowrap;
 	padding: 5px;
 	margin: 10px;
-	width: 250px;
   height: 250px;
 	text-align: center;
-	}
+}
+
 h1 {
-	text-align: left;
-	padding-left: 80px;
+	text-align: center;
 	}
 h2 {
 	margin: 5px;
 	}
-}
+
 
 /* Tablet */
 @media screen and (min-width: 541px) and (max-width:960px) {
@@ -47,6 +40,7 @@ h2 {
 		display: flex;
 		padding: 10px;
 		margin: 10px;
+		
 	}
 .flexbox {
 		display: flex;
@@ -60,9 +54,6 @@ h2 {
 		text-align: left;
 		margin: 10px;
 	}
-h1 {
-		text-align: center;
-		}
 img {
 		float: left;
 		margin: 10px;
@@ -82,22 +73,14 @@ p {
 		padding: 0px;
 	}
 .kontejner {
-		padding: 5px;
-		margin: 10px;
-		min-width: 300px;
 		height: 300px;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		width: 25%;
 	}
 .zena {
 		text-align: center;
 		padding: 15px;
-	}
-h1 {
-		text-align: center;
-		}
-h2{
-	margin: 0px;
 	}
 }
